--- a/client/views/index.html
+++ b/client/views/index.html
@@ -13,8 +13,10 @@
       <li>{{meetup.name}} - {{meetup.speaker}}</li>
     </ul>
     <form ng-submit="createMeetup()">
-      <input type="text" placeholder="Meetup Name" ng-model="meetupName">
-      <input type="text" placeholder="Speaker" ng-model="meetupSpeaker">
+      <input type="text" placeholder="Meetup Name" ng-model="meetupName" required/>
+      <br><br>
+      <input type="text" placeholder="Speaker" ng-model="meetupSpeaker" required/>
+      <br><br>
       <button type="submit">Add</button>
     </form>
   </div>
@@ -22,6 +24,7 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.js"></script>
-<script src="/js/controllers/meetups-controller.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-resource.js"></script>
+<script src="/js/app.js"></script>
 </body>
 </html>
